@@ -28,6 +28,7 @@
 	  incoming connection
 	* added more detailed instrumentation of the disk I/O thread
 
+	* fixed iterator bug in disk I/O thread
 	* fixed FIEMAP support on linux
 	* fixed strict aliasing warning on gcc
 	* fixed inconsistency when creating torrents with symlinks
